--- a/SistemaVeterinaria/public/css/estilos.css
+++ b/SistemaVeterinaria/public/css/estilos.css
@@ -5,17 +5,18 @@ color: #333;
 cursor: not-allowed;
 }
 
-    body {
-        font-family: Arial, sans-serif;
+    /* body {
+        /* font-family: Arial, sans-serif;
         background-color: #f5f5f5;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
-        margin: 0;
-    }
+        margin: 0; 
+        
+    } */
 
-    form {
+    /* form {
         background-color: #fff;
         padding: 20px;
         border-radius: 8px;
@@ -23,6 +24,31 @@ cursor: not-allowed;
         max-width: 600px;
         width: 100%;
         box-sizing: border-box;
+
+    } */
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #d9d2c3;
+        padding: 20px;
+        border-radius: 10px;
+    }
+
+    .form-container h2 {
+        color: #333;
+        font-size: 24px;
+        margin-bottom: 15px;
+    }
+    
+    /* Card del formulario */
+    .form-card {
+        background-color: #f8f6f3;
+        padding: 20px;
+        border-radius: 10px;
+        width: 80%;
+        max-width: 500px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     h2 {
