correccion de botones

--- a/SistemaVeterinaria/public/css/gestionProductos.css
+++ b/SistemaVeterinaria/public/css/gestionProductos.css
@@ -27,6 +27,17 @@ img {
     margin-bottom: 20px;
 }
 
+.form-container2 {
+    background: #fff;
+    padding: 50px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    width: 80%;                /* Establece el ancho como un porcentaje del contenedor padre */
+    max-width: 600px;          /* Limita el ancho máximo a 600px */
+    margin: 0 auto;            /* Centra el contenedor horizontalmente */
+}
+
 h2 {
     text-align: center;
     margin-bottom: 20px;
